--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -373,7 +373,7 @@
                   <div class="keen-slider__slide number-slide1">
                     <div class="poster">
                       <figure class="image">
-                        <img loading="lazy" src="./images/slide1.jpg" alt="">
+                        <img loading="lazy" src="./images/slide1.jpg" alt="" style="line-height: 0.75;">
                       </figure>
                     </div>
                     <div class="slide-info">
@@ -387,7 +387,7 @@
                   <div class="keen-slider__slide number-slide2">
                     <div class="poster">
                       <figure class="image">
-                        <img loading="lazy" src="./images/slide2.jpg" alt="">
+                        <img loading="lazy" src="./images/slide2.jpg" alt="" style="line-height: 0.75;">
                       </figure>
                     </div>
                     <div class="slide-info">
