--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -71,24 +71,45 @@
       <section class="subnavbar-block">
         <nav class="categories-menu">
           <ul id="categories-menu" class="subnavbar-list">
+            <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+            </svg>
             <li id="menu-item-15" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-15">
               <a href="#honey" aria-current="page">Мёд</a>
             </li>
+            <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+            </svg>
             <li id="menu-item-16" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-16">
               <a href="#jam" aria-current="page">Варенье</a>
             </li>
+            <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+            </svg>
             <li id="menu-item-17" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-17">
               <a href="tel:+78123288496">Чай</a>
             </li>
+            <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+            </svg>
             <li id="menu-item-18" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-18">
               <a href="#herbals">Травяные сборы</a>
             </li>
+            <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+            </svg>
             <li id="menu-item-19" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-19">
               <a href="#sweets" aria-current="page">Сладости</a>
             </li>
+            <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+            </svg>
             <li id="menu-item-20" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-20">
               <a href="#dishes" aria-current="page">Посуда</a>
             </li>
+            <svg xmlns='http://www.w3.org/2000/svg' width='12' height='13'>
+              <path d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/>
+            </svg>
           </ul>
         </nav>
       </section>
