--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -462,7 +462,8 @@
                 </div>
                 <div class="keen-slider__slide number-slide2 favorite-product">
                   <div class="product-image">
-                    <img src="./images/fav_2.png">
+                    <img src="./images/fav_2.png" class="image-front">
+                    <img src="./images/fav_2-1.png" class="image-back">
                   </div>
                   <div class="product-details">
                     <p class="p-name">Варенье «Чёрная смородина»</p>
