--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -513,7 +513,8 @@
                 </div>
                 <div class="keen-slider__slide number-slide4 favorite-product">
                   <div class="product-image">
-                    <img src="./images/fav_4.png">
+                    <img src="./images/fav_4.png" class="image-front">
+                    <img src="./images/fav_4-1.png" class="image-back">
                   </div>
                   <div class="product-details">
                     <p class="p-name">Мёд гричишный с разнотравьем</p>
