--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -54,13 +54,13 @@
             </nav>
             <a href="#shopping_cart" class="sc-link">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M3 12H21L18.282 21.2811C18.1572 21.7072 17.7663 22 17.3223 22H6.67772C6.23368 22 5.84282 21.7072 5.71802 21.2811L3 12Z" stroke="#F20202"></path>
-                <rect x="1" y="8" width="22" height="4" rx="1" stroke="#F20202"></rect>
-                <path d="M11 2L4 8" stroke="#F20202" stroke-linecap="round"></path>
-                <path d="M13 2L20 8" stroke="#F20202" stroke-linecap="round"></path>
-                <path d="M7.5 14L9 19.5" stroke="#F20202" stroke-linecap="round"></path>
-                <path d="M16.5 14L15 19.5" stroke="#F20202" stroke-linecap="round"></path>
-                <path d="M12 14.5V19.5" stroke="#F20202" stroke-linecap="round"></path>
+                <path d="M3 12H21L18.282 21.2811C18.1572 21.7072 17.7663 22 17.3223 22H6.67772C6.23368 22 5.84282 21.7072 5.71802 21.2811L3 12Z" stroke="#EE3524"></path>
+                <rect x="1" y="8" width="22" height="4" rx="1" stroke="#EE3524"></rect>
+                <path d="M11 2L4 8" stroke="#EE3524" stroke-linecap="round"></path>
+                <path d="M13 2L20 8" stroke="#EE3524" stroke-linecap="round"></path>
+                <path d="M7.5 14L9 19.5" stroke="#EE3524" stroke-linecap="round"></path>
+                <path d="M16.5 14L15 19.5" stroke="#EE3524" stroke-linecap="round"></path>
+                <path d="M12 14.5V19.5" stroke="#EE3524" stroke-linecap="round"></path>
               </svg>
             </a>
 
