--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -432,7 +432,8 @@
               <div id="favorites-slider" class="keen-slider">
                 <div class="keen-slider__slide number-slide1 favorite-product">
                   <div class="product-image">
-                    <img src="./images/fav_1.png">
+                    <img src="./images/fav_1.png" class="image-front">
+                    <img src="./images/fav_1-1.png" class="image-back">
                   </div>
                   <div class="product-details">
                     <p class="p-name">Чай травяной «Малиновый лист»</p>
