--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -372,8 +372,6 @@
 
           <div class="articles-slider-section">
 
-            <div class="articles-top-ribbon"></div>
-
             <div class="articles-slider-wrapper">
 
               <div class="articles-slider-content">
@@ -414,14 +412,22 @@
 
             </div>
 
-            <div class="articles-bottom-ribbon"></div>
-
           </div>
 
-          <div class="halfpage-pattern-top">
-            <video id="animated-video" autoplay="" muted="" poster="./images/pearl.svg" onended="videoFinished(this)">
-              <source src="./images/pearl.mp4" type="video/mp4">
-            </video>
+          <div class="mainpage-announcement-section">
+            <div class="announcement-info">
+              <div class="announcement-photo">
+                <img src="./images/announcement.png">
+              </div>
+              <div class="announcement-text">
+                <p>Пройдитесь по Мясницкой улице и познакомьтесь с многовековыми чайными традициями столицы. На маршруте вас ждут самый знаменитый в Москве магазин фарфора и старинные особняки, где бывали Грибоедов, Чайковский, Пушкин. И, конечно, чайный дом с китайскими драконами, наполненный изысканными сортами чая</p>
+                <a href="https://russpass.ru/moskovskoe-chaepitie/chaj-moskva" class="more-link">
+                  <button class="more-button">
+                    <span>Узнать больше</span>
+                  </button>
+                </a>
+              </div>
+            </div>
           </div>
 
           <div class="favorite-products-section">
