--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -259,7 +259,7 @@
             </div>
           </div>
 
-          <div class="mainpage-announcement-section">
+          <div class="news-section">
             <div class="announcement-info">
               <div class="announcement-photo">
                 <img src="./images/announcement.png">
