Update news section

--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -260,12 +260,13 @@
           </div>
 
           <div class="news-section">
-            <div class="announcement-info">
-              <div class="announcement-photo">
+            <div class="news-info">
+              <div class="news-photo">
                 <img src="./images/announcement.png">
               </div>
-              <div class="announcement-text">
-                <p>Пройдитесь по Мясницкой улице и познакомьтесь с многовековыми чайными традициями столицы. На маршруте вас ждут самый знаменитый в Москве магазин фарфора и старинные особняки, где бывали Грибоедов, Чайковский, Пушкин. И, конечно, чайный дом с китайскими драконами, наполненный изысканными сортами чая</p>
+              <div class="news-text">
+                <p class="news-text-title">Прогулка по чайной Москве</p>
+                <p class="news-text-description">Пройдитесь по Мясницкой улице и познакомьтесь с многовековыми чайными традициями столицы. На маршруте вас ждут самый знаменитый в Москве магазин фарфора и старинные особняки, где бывали Грибоедов, Чайковский, Пушкин. И, конечно, чайный дом с китайскими драконами, наполненный изысканными сортами чая</p>
                 <a href="https://russpass.ru/moskovskoe-chaepitie/chaj-moskva" class="more-link">
                   <button class="more-button">
                     <span>Узнать больше</span>
