--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -254,6 +254,10 @@
             </div>
           </div>
 
+          <div class="seasonal-section">
+            <img src="./images/seasonal_pattern.svg">
+          </div>
+
           <div class="news-section">
             <div class="news-info">
               <div class="news-photo">
