--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -255,7 +255,9 @@
           </div>
 
           <div class="seasonal-section">
-            <img src="./images/seasonal_pattern.svg">
+            <div class="seasonal-section-content">
+              <img src="./images/seasonal_pattern.svg">
+            </div>
           </div>
 
           <div class="news-section">
