--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -256,7 +256,7 @@
 
           <div class="seasonal-section">
             <div class="seasonal-section-content">
-              <img src="./images/seasonal_pattern.svg">
+              <img src="./images/seasonal_pattern.svg" class="seasonal-pattern">
             </div>
           </div>
 
