--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -257,6 +257,10 @@
           <div class="seasonal-section">
             <div class="seasonal-section-content">
               <img src="./images/seasonal_pattern.svg" class="seasonal-pattern">
+            <picture>
+              <source media="(max-width: 768px)" srcset="./images/seasonal_pattern_mobile.svg">
+              <img src="./images/seasonal_pattern.svg">
+            </picture>
             </div>
           </div>
 
