--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -258,7 +258,7 @@
             <div class="seasonal-section-content">
               <picture>
                 <source media="(max-width: 768px)" srcset="./images/seasonal_pattern_mobile.svg">
-                <img src="./images/seasonal_pattern.svg">
+                <img src="./images/seasonal_pattern.svg" class="seasonal-pattern">
               </picture>
             </div>
           </div>
