--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -340,7 +340,8 @@
                 </div>
                 <div class="keen-slider__slide number-slide3 favorite-product">
                   <div class="product-image">
-                    <img src="./images/fav_3.png">
+                    <img src="./images/fav_3.png" class="image-front">
+                    <img src="./images/fav_1-1.png" class="image-back">
                   </div>
                   <div class="product-details">
                     <p class="p-name">«Чай Москва» особый новогодний купаж</p>
