--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -370,7 +370,7 @@
                     <img src="./images/fav_4-1.png" class="image-back">
                   </div>
                   <div class="product-details">
-                    <p class="p-name">Мёд гричишный с разнотравьем</p>
+                    <p class="p-name">Мёд гречишный с разнотравьем</p>
                     <p class="p-quantity">0,2 л</p>
                   </div>
                   <div class="product-price">
