--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -399,7 +399,7 @@
               <div class="map-description">
                 <div class="map-description-text">
                   <p class="map-title">Где купить в Москве</p>
-                  <p>Приобрести купаж «Москва» вы можете на флагманской площадке Тверской площади и в сети магазинов «Азбука вкуса»: согревающий и ароматный напиток в 125 кофейнях, листовой чай — в 145 магазинах.</p>
+                  <p class="map-text">Приобрести купаж «Москва» вы можете на флагманской площадке Тверской площади и в сети магазинов «Азбука вкуса»: согревающий и ароматный напиток в 125 кофейнях, листовой чай — в 145 магазинах.</p>
                   <a href="https://russpass.ru/moskovskoe-chaepitie#map" class="map-link">
                     <button class="map-button">
                       <span>Полная карта</span>
