--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -260,6 +260,7 @@
                 <source media="(max-width: 768px)" srcset="./images/seasonal_pattern_mobile.svg">
                 <img src="./images/seasonal_pattern.svg" class="seasonal-pattern">
               </picture>
+              <div class="seasonal-section-title">Новинка</div>
             </div>
           </div>
 
