--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -261,6 +261,15 @@
                 <img src="./images/seasonal_pattern.svg" class="seasonal-pattern">
               </picture>
               <div class="seasonal-section-title">Новинка</div>
+              <div class="seasonal-product">
+                <div class="seasonal-product-left">
+                  <p>Тёплые, пряные, медовые оттенки в осеннем чае Москва</p>
+                </div>
+                <img src="/images/autumn_tea.png" class="seasonal-product-img">
+                <div class="seasonal-product-right">
+                  <p>Купаж черного байхового чая цейлонского, кенийского; дольки апельсина, сушенное яблоко, кардамон, корица, пищевой ароматизатор</p>
+                </div>
+              </div>
             </div>
           </div>
 
