--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -265,7 +265,7 @@
                 <div class="seasonal-product-left">
                   <p>Тёплые, пряные, медовые оттенки в осеннем чае Москва</p>
                 </div>
-                <img src="/images/autumn_tea.png" class="seasonal-product-img">
+                <img src="./images/autumn_tea.png" class="seasonal-product-img">
                 <div class="seasonal-product-right">
                   <p>Купаж черного байхового чая цейлонского, кенийского; дольки апельсина, сушенное яблоко, кардамон, корица, пищевой ароматизатор</p>
                 </div>
