--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -260,7 +260,9 @@
                 <source media="(max-width: 768px)" srcset="./images/seasonal_pattern_mobile.svg">
                 <img src="./images/seasonal_pattern.svg" class="seasonal-pattern">
               </picture>
-              <div class="seasonal-section-title">Новинка</div>
+              <div class="seasonal-section-title-wrapper">
+                <div class="seasonal-section-title">Новинка</div>
+              </div>
               <div class="seasonal-product">
                 <div class="seasonal-product-left">
                   <p>Тёплые, пряные, медовые оттенки в осеннем чае Москва</p>
