--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -265,11 +265,11 @@
               </div>
               <div class="seasonal-product">
                 <div class="seasonal-product-left">
-                  <p>Тёплые, пряные, медовые оттенки в осеннем чае Москва</p>
+                  <p class="seasonal-product-description">Тёплые, пряные, медовые оттенки в осеннем чае Москва</p>
                 </div>
                 <img src="./images/autumn_tea.png" class="seasonal-product-img">
                 <div class="seasonal-product-right">
-                  <p>Купаж черного байхового чая цейлонского, кенийского; дольки апельсина, сушенное яблоко, кардамон, корица, пищевой ароматизатор</p>
+                  <p class="seasonal-product-ingredients">Купаж черного байхового чая цейлонского, кенийского; дольки апельсина, сушенное яблоко, кардамон, корица, пищевой ароматизатор</p>
                 </div>
               </div>
             </div>
