--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -265,11 +265,19 @@
               </div>
               <div class="seasonal-product">
                 <div class="seasonal-product-left">
-                  <p class="seasonal-product-description">Тёплые, пряные, медовые оттенки в осеннем чае Москва</p>
+                  <p>Тёплые, пряные, медовые оттенки в осеннем чае Москва</p>
+                    <button class="more-button">
+                      <span>В корзину</span>
+                    </button>
                 </div>
                 <img src="./images/autumn_tea.png" class="seasonal-product-img">
                 <div class="seasonal-product-right">
                   <p class="seasonal-product-ingredients">Купаж черного байхового чая цейлонского, кенийского; дольки апельсина, сушенное яблоко, кардамон, корица, пищевой ароматизатор</p>
+                  <a href="#autumn_tea" class="more-link">
+                    <button class="more-button">
+                      <span>Подробнее</span>
+                    </button>
+                  </a>
                 </div>
               </div>
             </div>
