--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -267,7 +267,7 @@
                 <div class="seasonal-product-left">
                   <p>Тёплые, пряные, медовые оттенки в осеннем чае Москва</p>
                     <button class="seasonal-buy-button">
-                      <span>В корзину</span>
+                      В корзину
                     </button>
                 </div>
                 <img src="./images/autumn_tea.png" class="seasonal-product-img">
@@ -275,7 +275,7 @@
                   <p>Купаж черного байхового чая цейлонского, кенийского; дольки апельсина, сушенное яблоко, кардамон, корица, пищевой ароматизатор</p>
                   <a href="#autumn_tea" class="more-link">
                     <button class="more-button">
-                      <span>Подробнее</span>
+                      Подробнее
                     </button>
                   </a>
                 </div>
