--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -311,6 +311,7 @@
                     <img src="./images/fav_1.png" class="image-front">
                     <img src="./images/fav_1-1.png" class="image-back">
                   </div>
+                  <div class="favorite-product-info">
                   <div class="product-details">
                     <p class="p-name">Чай травяной «Малиновый лист»</p>
                     <p class="p-quantity">200 гр</p>
@@ -330,6 +331,7 @@
                         <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
                       </svg>
                     </button>
+                    </div>
                   </div>
                 </div>
                 <div class="keen-slider__slide number-slide2 favorite-product">
@@ -337,6 +339,7 @@
                     <img src="./images/fav_2.png" class="image-front">
                     <img src="./images/fav_2-1.png" class="image-back">
                   </div>
+                  <div class="favorite-product-info">
                   <div class="product-details">
                     <p class="p-name">Варенье «Чёрная смородина»</p>
                     <p class="p-quantity">0,2 л</p>
@@ -358,11 +361,13 @@
                     </button>
                   </div>
                 </div>
+                </div>
                 <div class="keen-slider__slide number-slide3 favorite-product">
                   <div class="product-image">
                     <img src="./images/fav_3.png" class="image-front">
                     <img src="./images/fav_3-1.png" class="image-back">
                   </div>
+                  <div class="favorite-product-info">
                   <div class="product-details">
                     <p class="p-name">«Чай Москва» особый новогодний купаж</p>
                     <p class="p-quantity">1 кг</p>
@@ -383,12 +388,14 @@
                       </svg>
                     </button>
                   </div>
+                  </div>
                 </div>
                 <div class="keen-slider__slide number-slide4 favorite-product">
                   <div class="product-image">
                     <img src="./images/fav_4.png" class="image-front">
                     <img src="./images/fav_4-1.png" class="image-back">
                   </div>
+                  <div class="favorite-product-info">
                   <div class="product-details">
                     <p class="p-name">Мёд гречишный с разнотравьем</p>
                     <p class="p-quantity">0,2 л</p>
@@ -408,6 +415,7 @@
                         <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
                       </svg>
                     </button>
+                  </div>
                   </div>
                 </div>
               </div>
