--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -307,15 +307,16 @@
               </div>
               <div id="favorites-slider" class="keen-slider">
                 <div class="keen-slider__slide number-slide1 favorite-product">
+                  <div class="favorite-product-card">
                   <div class="product-image">
                     <img src="./images/fav_1.png" class="image-front">
                     <img src="./images/fav_1-1.png" class="image-back">
                   </div>
-                  <div class="favorite-product-info">
                   <div class="product-details">
                     <p class="p-name">Чай травяной «Малиновый лист»</p>
                     <p class="p-quantity">200 гр</p>
                   </div>
+                  </div>
                   <div class="product-price">
                     340 р.
                   </div>
@@ -331,18 +332,18 @@
                         <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
                       </svg>
                     </button>
-                    </div>
                   </div>
                 </div>
                 <div class="keen-slider__slide number-slide2 favorite-product">
+                  <div class="favorite-product-card">
                   <div class="product-image">
                     <img src="./images/fav_2.png" class="image-front">
                     <img src="./images/fav_2-1.png" class="image-back">
                   </div>
-                  <div class="favorite-product-info">
                   <div class="product-details">
                     <p class="p-name">Варенье «Чёрная смородина»</p>
                     <p class="p-quantity">0,2 л</p>
+                  </div>
                   </div>
                   <div class="product-price">
                     340 р.
@@ -361,16 +362,16 @@
                     </button>
                   </div>
                 </div>
-                </div>
                 <div class="keen-slider__slide number-slide3 favorite-product">
+                  <div class="favorite-product-card">
                   <div class="product-image">
                     <img src="./images/fav_3.png" class="image-front">
                     <img src="./images/fav_3-1.png" class="image-back">
                   </div>
-                  <div class="favorite-product-info">
                   <div class="product-details">
                     <p class="p-name">«Чай Москва» особый новогодний купаж</p>
                     <p class="p-quantity">1 кг</p>
+                  </div>
                   </div>
                   <div class="product-price">
                     632 р.
@@ -388,17 +389,17 @@
                       </svg>
                     </button>
                   </div>
-                  </div>
                 </div>
                 <div class="keen-slider__slide number-slide4 favorite-product">
+                  <div class="favorite-product-card">
                   <div class="product-image">
                     <img src="./images/fav_4.png" class="image-front">
                     <img src="./images/fav_4-1.png" class="image-back">
                   </div>
-                  <div class="favorite-product-info">
                   <div class="product-details">
                     <p class="p-name">Мёд гречишный с разнотравьем</p>
                     <p class="p-quantity">0,2 л</p>
+                  </div>
                   </div>
                   <div class="product-price">
                     342 р.
@@ -415,7 +416,6 @@
                         <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
                       </svg>
                     </button>
-                  </div>
                   </div>
                 </div>
               </div>
