--- a/teamoscow/index.html
+++ b/teamoscow/index.html
@@ -308,114 +308,122 @@
               <div id="favorites-slider" class="keen-slider">
                 <div class="keen-slider__slide number-slide1 favorite-product">
                   <div class="favorite-product-card">
-                  <div class="product-image">
-                    <img src="./images/fav_1.png" class="image-front">
-                    <img src="./images/fav_1-1.png" class="image-back">
+                    <div class="product-image">
+                      <img src="./images/fav_1.png" class="image-front">
+                      <img src="./images/fav_1-1.png" class="image-back">
+                    </div>
+                    <div class="product-details">
+                      <p class="p-name">Чай травяной «Малиновый лист»</p>
+                      <p class="p-quantity">200 гр</p>
+                    </div>
                   </div>
-                  <div class="product-details">
-                    <p class="p-name">Чай травяной «Малиновый лист»</p>
-                    <p class="p-quantity">200 гр</p>
-                  </div>
-                  </div>
-                  <div class="product-price">
-                    340 р.
-                  </div>
-                  <div class="p-button-wrapper">
-                    <button class="add-to-cart-button">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
-                        <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
-                        <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
-                        <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
-                        <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
-                        <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
-                        <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
-                      </svg>
-                    </button>
+                  <div class="favorite-product-bottom">
+                    <div class="product-price">
+                      340 р.
+                    </div>
+                    <div class="p-button-wrapper">
+                      <button class="add-to-cart-button">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
+                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
+                          <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
+                          <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
+                          <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
+                        </svg>
+                      </button>
+                    </div>
                   </div>
                 </div>
                 <div class="keen-slider__slide number-slide2 favorite-product">
                   <div class="favorite-product-card">
-                  <div class="product-image">
-                    <img src="./images/fav_2.png" class="image-front">
-                    <img src="./images/fav_2-1.png" class="image-back">
+                    <div class="product-image">
+                      <img src="./images/fav_2.png" class="image-front">
+                      <img src="./images/fav_2-1.png" class="image-back">
+                    </div>
+                    <div class="product-details">
+                      <p class="p-name">Варенье «Чёрная смородина»</p>
+                      <p class="p-quantity">0,2 л</p>
+                    </div>
                   </div>
-                  <div class="product-details">
-                    <p class="p-name">Варенье «Чёрная смородина»</p>
-                    <p class="p-quantity">0,2 л</p>
-                  </div>
-                  </div>
-                  <div class="product-price">
-                    340 р.
-                  </div>
-                  <div class="p-button-wrapper">
-                    <button class="add-to-cart-button">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
-                        <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
-                        <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
-                        <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
-                        <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
-                        <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
-                        <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
-                      </svg>
-                    </button>
+                  <div class="favorite-product-bottom">
+                    <div class="product-price">
+                      340 р.
+                    </div>
+                    <div class="p-button-wrapper">
+                      <button class="add-to-cart-button">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
+                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
+                          <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
+                          <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
+                          <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
+                        </svg>
+                      </button>
+                    </div>
                   </div>
                 </div>
                 <div class="keen-slider__slide number-slide3 favorite-product">
                   <div class="favorite-product-card">
-                  <div class="product-image">
-                    <img src="./images/fav_3.png" class="image-front">
-                    <img src="./images/fav_3-1.png" class="image-back">
+                    <div class="product-image">
+                      <img src="./images/fav_3.png" class="image-front">
+                      <img src="./images/fav_3-1.png" class="image-back">
+                    </div>
+                    <div class="product-details">
+                      <p class="p-name">«Чай Москва» особый новогодний купаж</p>
+                      <p class="p-quantity">1 кг</p>
+                    </div>
                   </div>
-                  <div class="product-details">
-                    <p class="p-name">«Чай Москва» особый новогодний купаж</p>
-                    <p class="p-quantity">1 кг</p>
-                  </div>
-                  </div>
-                  <div class="product-price">
-                    632 р.
-                  </div>
-                  <div class="p-button-wrapper">
-                    <button class="add-to-cart-button">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
-                        <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
-                        <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
-                        <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
-                        <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
-                        <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
-                        <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
-                      </svg>
-                    </button>
+                  <div class="favorite-product-bottom">
+                    <div class="product-price">
+                      632 р.
+                    </div>
+                    <div class="p-button-wrapper">
+                      <button class="add-to-cart-button">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
+                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
+                          <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
+                          <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
+                          <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
+                        </svg>
+                      </button>
+                    </div>
                   </div>
                 </div>
                 <div class="keen-slider__slide number-slide4 favorite-product">
                   <div class="favorite-product-card">
-                  <div class="product-image">
-                    <img src="./images/fav_4.png" class="image-front">
-                    <img src="./images/fav_4-1.png" class="image-back">
+                    <div class="product-image">
+                      <img src="./images/fav_4.png" class="image-front">
+                      <img src="./images/fav_4-1.png" class="image-back">
+                    </div>
+                    <div class="product-details">
+                      <p class="p-name">Мёд гречишный с разнотравьем</p>
+                      <p class="p-quantity">0,2 л</p>
+                    </div>
                   </div>
-                  <div class="product-details">
-                    <p class="p-name">Мёд гречишный с разнотравьем</p>
-                    <p class="p-quantity">0,2 л</p>
-                  </div>
-                  </div>
-                  <div class="product-price">
-                    342 р.
-                  </div>
-                  <div class="p-button-wrapper">
-                    <button class="add-to-cart-button">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
-                        <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
-                        <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
-                        <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
-                        <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
-                        <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
-                        <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
-                      </svg>
-                    </button>
+                  <div class="favorite-product-bottom">
+                    <div class="product-price">
+                      342 р.
+                    </div>
+                    <div class="p-button-wrapper">
+                      <button class="add-to-cart-button">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M3 12.001H21L18.282 21.282C18.1572 21.7082 17.7663 22.001 17.3223 22.001H6.67772C6.23368 22.001 5.84282 21.7082 5.71802 21.282L3 12.001Z" stroke="white"/>
+                          <rect x="1" y="8.00098" width="22" height="4" rx="1" stroke="white"/>
+                          <path d="M11 2.00098L4 8.00098" stroke="white" stroke-linecap="round"/>
+                          <path d="M13 2.00098L20 8.00098" stroke="white" stroke-linecap="round"/>
+                          <path d="M7.5 14.001L9 19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M16.5 14.001L15 19.501" stroke="white" stroke-linecap="round"/>
+                          <path d="M12 14.501V19.501" stroke="white" stroke-linecap="round"/>
+                        </svg>
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
